--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@
     background: #F0FFF0;
 }
 
+.categories{
+
+    width: 400px;
+    height: 400px;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;    
+    padding-top: 30px;
+    background: white;
+
+}
 .third{
     
     width: 400px;
